adaptive next pages

--- a/templates/pages/catalog_opened_filters+checkbox+active.html
+++ b/templates/pages/catalog_opened_filters+checkbox+active.html
@@ -130,6 +130,14 @@
             </form>
         </div>
 
+        <a href="catalog_main.html" class="btn_main">
+            <p class="main_text uppercase btn_text">применить</p>
+        </a>
+
+        <a href="catalog_main.html" class="btn_main">
+            <p class="main_text uppercase btn_text">очистить фильтры</p>
+        </a>
+
     </div>
 
     <div class="catalog">
