--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -62,13 +62,13 @@
                 </div>
 
                 <div class="info_row_hidden">
-                        <a href="#" class="main_text_addit_dark uppercase">XXS</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XS</a>
-                        <a href="#" class="main_text_addit_dark uppercase">S</a>
-                        <a href="#" class="main_text_addit_dark uppercase">M</a>
-                        <a href="#" class="main_text_addit_dark uppercase">L</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XL</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XXL</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XXS</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XS</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">S</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">M</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">L</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XL</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XXL</a>
                 </div>
 
                 <a href="#" class="card_basket">
@@ -109,13 +109,13 @@
                 </div>
 
                 <div class="info_row_hidden">
-                        <a href="#" class="main_text_addit_dark uppercase">XXS</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XS</a>
-                        <a href="#" class="main_text_addit_dark uppercase">S</a>
-                        <a href="#" class="main_text_addit_dark uppercase">M</a>
-                        <a href="#" class="main_text_addit_dark uppercase">L</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XL</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XXL</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XXS</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XS</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">S</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">M</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">L</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XL</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XXL</a>
                 </div>
 
                 <a href="#" class="card_basket">
@@ -156,13 +156,13 @@
             </div>
 
             <div class="info_row_hidden">
-                    <a href="#" class="main_text_addit_dark uppercase">XXS</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XS</a>
-                    <a href="#" class="main_text_addit_dark uppercase">S</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XXS</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XS</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">S</a>
                     <a href="#" class="main_text_title uppercase">M</a>
-                    <a href="#" class="main_text_addit_dark uppercase">L</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XL</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XXL</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">L</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XL</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XXL</a>
             </div>
 
             <div class="card_basket">
@@ -206,13 +206,13 @@
             </div>
 
             <div class="info_row_hidden">
-                    <a href="#" class="main_text_addit_dark uppercase">XXS</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XS</a>
-                    <a href="#" class="main_text_addit_dark uppercase">S</a>
-                    <a href="#" class="main_text_addit_dark uppercase">M</a>
-                    <a href="#" class="main_text_addit_dark uppercase">L</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XL</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XXL</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XXS</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XS</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">S</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">M</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">L</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XL</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XXL</a>
             </div>
 
             <a href="#" class="card_basket">
@@ -228,7 +228,7 @@
 
     <div class="learn_more_mobile">
         <p class="main_text_addit_dark">Выбор наших<br>опокупателей</p>
-        <a href="blog.html" class="main_text_contrast underline">Смотреть все хиты</a>
+        <a href="catalog_our_hits.html" class="main_text_contrast underline">Смотреть все хиты</a>
     </div>
 
     </div>
@@ -297,7 +297,7 @@
         <p class="title_first_light total_looks_title">готовые образы</p>
     </a>
 
-    <a href="catalog_evening_clothes.html" class="main_page_banner__mobile sale_mobile">
+    <a href="catalog_sales.html" class="main_page_banner__mobile sale_mobile">
         <p class="title_first sale_title">скидки до 70%</p>
     </a>
 
