--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -8,7 +8,9 @@
 
 
 <div class="container conacts">
-    <div class="map"></div>
+    <div class="map">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A64153c43f1c7ed8279950871c9007ed7be9b82ae8b9bed4bf047573bba470c37&amp;width=100%25&amp;height=470&amp;lang=ru_RU&amp;scroll=true"></script>
+    </div>
     <div class="contacts_info info_pages_text">
         <div class="contacts_info__blok">
             <p>г. Екатеринбург, ул. 8 Марта д. 46 </p>
