--- a/templates/pages/favourites.html
+++ b/templates/pages/favourites.html
@@ -6,13 +6,13 @@
 
 <!-- Избранное начало -->
 
-<div class="container favourites_panel">
+<div class="container favourites_panel panel_height">
     <div class="main_text">10 товаров</div>
 
     <div class="sorting">
-        <a href="#" class="main_text_title">сортировать по</a>
+        <a href="#" class="main_text uppercase">сортировка</a>
         <a href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="sorting_arrow">
                 <path d="M5.83335 8.3335L10 12.5002L14.1667 8.3335" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
         </a>
@@ -32,6 +32,10 @@
             <a href="#" class="sorting_item main_text">По возрастанию цены</a>
             <a href="#" class="sorting_item main_text">Сначала в наличии</a>
         </div>
+
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none" class="sorting_icon">
+            <path d="M4.16602 6.25H20.8327M10.416 12.5H20.8327M16.666 18.75H20.8327" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
     </div>
 </div>
 
