--- a/templates/partials/favourites_products.html
+++ b/templates/partials/favourites_products.html
@@ -25,13 +25,13 @@
         </div>
 
         <div class="info_row_hidden">
-                <a href="#" class="main_text_addit_dark uppercase">XXS</a>
-                <a href="#" class="main_text_addit_dark uppercase">XS</a>
-                <a href="#" class="main_text_addit_dark uppercase">S</a>
-                <a href="#" class="main_text_addit_dark uppercase">M</a>
-                <a href="#" class="main_text_addit_dark uppercase">L</a>
-                <a href="#" class="main_text_addit_dark uppercase">XL</a>
-                <a href="#" class="main_text_addit_dark uppercase">XXL</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">XXS</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">XS</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">S</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">M</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">L</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">XL</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">XXL</a>
         </div>
 
         <a href="#" class="card_basket">
@@ -72,13 +72,13 @@
     </div>
 
     <div class="info_row_hidden">
-        <a href="#" class="main_text_addit_dark uppercase">35</a>
-        <a href="#" class="main_text_addit_dark uppercase">36</a>
-        <a href="#" class="main_text_addit_dark uppercase">37</a>
-        <a href="#" class="main_text_addit_dark uppercase">38</a>
-        <a href="#" class="main_text_addit_dark uppercase">39</a>
-        <a href="#" class="main_text_addit_dark uppercase">40</a>
-        <a href="#" class="main_text_addit_dark uppercase">41</a>
+        <a href="#" class="main_text_addit_dark uppercase size_choice">35</a>
+        <a href="#" class="main_text_addit_dark uppercase size_choice">36</a>
+        <a href="#" class="main_text_addit_dark uppercase size_choice">37</a>
+        <a href="#" class="main_text_addit_dark uppercase size_choice">38</a>
+        <a href="#" class="main_text_addit_dark uppercase size_choice">39</a>
+        <a href="#" class="main_text_addit_dark uppercase size_choice">40</a>
+        <a href="#" class="main_text_addit_dark uppercase size_choice">41</a>
     </div>
 
     <a href="#" class="card_basket">
@@ -120,13 +120,13 @@
     </div>
 
     <div class="info_row_hidden">
-            <a href="#" class="main_text_addit_dark uppercase">35</a>
-            <a href="#" class="main_text_addit_dark uppercase">36</a>
-            <a href="#" class="main_text_addit_dark uppercase">37</a>
-            <a href="#" class="main_text_addit_dark uppercase">38</a>
-            <a href="#" class="main_text_addit_dark uppercase">39</a>
-            <a href="#" class="main_text_addit_dark uppercase">40</a>
-            <a href="#" class="main_text_addit_dark uppercase">41</a>
+            <a href="#" class="main_text_addit_dark uppercase size_choice">35</a>
+            <a href="#" class="main_text_addit_dark uppercase size_choice">36</a>
+            <a href="#" class="main_text_addit_dark uppercase size_choice">37</a>
+            <a href="#" class="main_text_addit_dark uppercase size_choice">38</a>
+            <a href="#" class="main_text_addit_dark uppercase size_choice">39</a>
+            <a href="#" class="main_text_addit_dark uppercase size_choice">40</a>
+            <a href="#" class="main_text_addit_dark uppercase size_choice">41</a>
     </div>
 
     <a href="#" class="card_basket">
@@ -280,13 +280,13 @@
         </div>
     
         <div class="info_row_hidden">
-                <a href="#" class="main_text_addit_dark uppercase">35</a>
-                <a href="#" class="main_text_addit_dark uppercase">36</a>
-                <a href="#" class="main_text_addit_dark uppercase">37</a>
-                <a href="#" class="main_text_addit_dark uppercase">38</a>
-                <a href="#" class="main_text_addit_dark uppercase">39</a>
-                <a href="#" class="main_text_addit_dark uppercase">40</a>
-                <a href="#" class="main_text_addit_dark uppercase">41</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">35</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">36</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">37</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">38</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">39</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">40</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">41</a>
         </div>
     
         <a href="#" class="card_basket">
@@ -404,13 +404,13 @@
         </div>
     
         <div class="info_row_hidden">
-                <a href="#" class="main_text_addit_dark uppercase">35</a>
-                <a href="#" class="main_text_addit_dark uppercase">36</a>
-                <a href="#" class="main_text_addit_dark uppercase">37</a>
-                <a href="#" class="main_text_addit_dark uppercase">38</a>
-                <a href="#" class="main_text_addit_dark uppercase">39</a>
-                <a href="#" class="main_text_addit_dark uppercase">40</a>
-                <a href="#" class="main_text_addit_dark uppercase">41</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">35</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">36</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">37</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">38</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">39</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">40</a>
+                <a href="#" class="main_text_addit_dark uppercase size_choice">41</a>
         </div>
     
         <a href="#" class="card_basket">
