--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -178,6 +178,27 @@
 <!-- Футер мобильной версии начало -->
 
 <div class="footer_mobile">
+
+    <div class="footer_subscribe">
+        <p class="footer_main_text_contrast">Подпишись на наши новости</p>
+
+        <div class="footer_subscribe__block">
+            <form method="GET" action="#" class="footer_subscribe_form">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="letter">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M17 4H3C2.86739 4 2.74021 4.05268 2.64645 4.14645C2.55268 4.24021 2.5 4.36739 2.5 4.5V15.5C2.5 15.6326 2.55268 15.7598 2.64645 15.8536C2.74021 15.9473 2.86739 16 3 16H17C17.1326 16 17.2598 15.9473 17.3536 15.8536C17.4473 15.7598 17.5 15.6326 17.5 15.5V4.5C17.5 4.36739 17.4473 4.24021 17.3536 4.14645C17.2598 4.05268 17.1326 4 17 4ZM3.5 15V5H16.5V15H3.5Z" fill="white"/>
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M17.3239 4.88L10.2789 10.88C10.1882 10.9573 10.0729 10.9997 9.95371 10.9995C9.83454 10.9994 9.71934 10.9566 9.6289 10.879L2.6729 4.879C2.59546 4.81237 2.5403 4.72362 2.51482 4.62469C2.48935 4.52577 2.49478 4.42141 2.5304 4.32567C2.56602 4.22992 2.63011 4.14739 2.71405 4.08916C2.79798 4.03094 2.89774 3.99982 2.9999 4H16.9999C17.102 4.0002 17.2016 4.03166 17.2854 4.09017C17.3691 4.14867 17.4329 4.23141 17.4681 4.32725C17.5034 4.42309 17.5085 4.52743 17.4827 4.62625C17.4569 4.72507 17.4015 4.81362 17.3239 4.88ZM15.6419 5H4.3449L9.9569 9.841L15.6419 5Z" fill="white"/>
+                </svg>
+                <input type="text" placeholder="Введите e-mail" name="e-mail" class="footer_input_e-mail">
+                <a href="#" class="footer_main_text">Ok</a>
+            </form>
+            <div class="small_text_light">
+                подписываясь на новости, вы соглашаетесь с
+                <a href="privacy_policy.html" class="underline small_text_light">политикой конфиденциальности и условиями обработки персональных данных</a>
+            </div>
+        </div>
+
+    </div>
+    
     <div class="footer_social">
         <p class="footer_main_text_contrast">Следи за нами в соцсетях</p>
         <div class="icons_social">
@@ -198,7 +219,7 @@
                     </defs>
                 </svg>
             </a>
-            <a href="">
+            <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
                     <path d="M9.75 2.5H20.25C24.25 2.5 27.5 5.75 27.5 9.75V20.25C27.5 22.1728 26.7362 24.0169 25.3765 25.3765C24.0169 26.7362 22.1728 27.5 20.25 27.5H9.75C5.75 27.5 2.5 24.25 2.5 20.25V9.75C2.5 7.82718 3.26384 5.98311 4.62348 4.62348C5.98311 3.26384 7.82718 2.5 9.75 2.5ZM9.5 5C8.30653 5 7.16193 5.47411 6.31802 6.31802C5.47411 7.16193 5 8.30653 5 9.5V20.5C5 22.9875 7.0125 25 9.5 25H20.5C21.6935 25 22.8381 24.5259 23.682 23.682C24.5259 22.8381 25 21.6935 25 20.5V9.5C25 7.0125 22.9875 5 20.5 5H9.5ZM21.5625 6.875C21.9769 6.875 22.3743 7.03962 22.6674 7.33265C22.9604 7.62567 23.125 8.0231 23.125 8.4375C23.125 8.8519 22.9604 9.24933 22.6674 9.54235C22.3743 9.83538 21.9769 10 21.5625 10C21.1481 10 20.7507 9.83538 20.4576 9.54235C20.1646 9.24933 20 8.8519 20 8.4375C20 8.0231 20.1646 7.62567 20.4576 7.33265C20.7507 7.03962 21.1481 6.875 21.5625 6.875ZM15 8.75C16.6576 8.75 18.2473 9.40848 19.4194 10.5806C20.5915 11.7527 21.25 13.3424 21.25 15C21.25 16.6576 20.5915 18.2473 19.4194 19.4194C18.2473 20.5915 16.6576 21.25 15 21.25C13.3424 21.25 11.7527 20.5915 10.5806 19.4194C9.40848 18.2473 8.75 16.6576 8.75 15C8.75 13.3424 9.40848 11.7527 10.5806 10.5806C11.7527 9.40848 13.3424 8.75 15 8.75ZM15 11.25C14.0054 11.25 13.0516 11.6451 12.3483 12.3483C11.6451 13.0516 11.25 14.0054 11.25 15C11.25 15.9946 11.6451 16.9484 12.3483 17.6517C13.0516 18.3549 14.0054 18.75 15 18.75C15.9946 18.75 16.9484 18.3549 17.6517 17.6517C18.3549 16.9484 18.75 15.9946 18.75 15C18.75 14.0054 18.3549 13.0516 17.6517 12.3483C16.9484 11.6451 15.9946 11.25 15 11.25Z" fill="white"/>
                 </svg>
