--- a/templates/partials/recent_product.html
+++ b/templates/partials/recent_product.html
@@ -31,13 +31,13 @@
                 </div>
 
                 <div class="info_row_hidden">
-                        <a href="#" class="main_text_addit_dark uppercase">XXS</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XS</a>
-                        <a href="#" class="main_text_addit_dark uppercase">S</a>
-                        <a href="#" class="main_text_addit_dark uppercase">M</a>
-                        <a href="#" class="main_text_addit_dark uppercase">L</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XL</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XXL</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XXS</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XS</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">S</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">M</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">L</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XL</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XXL</a>
                 </div>
 
                 <a href="#" class="card_basket">
@@ -78,13 +78,13 @@
                 </div>
 
                 <div class="info_row_hidden">
-                        <a href="#" class="main_text_addit_dark uppercase">XXS</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XS</a>
-                        <a href="#" class="main_text_addit_dark uppercase">S</a>
-                        <a href="#" class="main_text_addit_dark uppercase">M</a>
-                        <a href="#" class="main_text_addit_dark uppercase">L</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XL</a>
-                        <a href="#" class="main_text_addit_dark uppercase">XXL</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XXS</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XS</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">S</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">M</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">L</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XL</a>
+                        <a href="#" class="main_text_addit_dark uppercase size_choice">XXL</a>
                 </div>
 
                 <a href="#" class="card_basket">
@@ -125,13 +125,13 @@
             </div>
 
             <div class="info_row_hidden">
-                    <a href="#" class="main_text_addit_dark uppercase">XXS</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XS</a>
-                    <a href="#" class="main_text_addit_dark uppercase">S</a>
-                    <a href="#" class="main_text_title uppercase">M</a>
-                    <a href="#" class="main_text_addit_dark uppercase">L</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XL</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XXL</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XXS</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XS</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">S</a>
+                    <a href="#" class="main_text_title uppercase size_choice">M</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">L</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XL</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XXL</a>
             </div>
 
             <div class="card_basket">
@@ -175,13 +175,13 @@
             </div>
 
             <div class="info_row_hidden">
-                    <a href="#" class="main_text_addit_dark uppercase">XXS</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XS</a>
-                    <a href="#" class="main_text_addit_dark uppercase">S</a>
-                    <a href="#" class="main_text_addit_dark uppercase">M</a>
-                    <a href="#" class="main_text_addit_dark uppercase">L</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XL</a>
-                    <a href="#" class="main_text_addit_dark uppercase">XXL</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XXS</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XS</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">S</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">M</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">L</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XL</a>
+                    <a href="#" class="main_text_addit_dark uppercase size_choice">XXL</a>
             </div>
 
             <a href="#" class="card_basket">
